src/objects/Estimating_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Business_Modeling_Simple__c</fullName>
        <label>Business Modelling</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Modelling_Complex__c</fullName>
        <label>Business Modelling</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Modelling_Medium__c</fullName>
        <label>Business Modelling</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complex__c</fullName>
        <label>Complex</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow and Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Report and Dashboard</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Batch Integration</fullName>
                </value>
                <value>
                    <fullName>Integration Real Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployment_Complex__c</fullName>
        <label>Deployment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Medium__c</fullName>
        <label>Deployment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Simple__c</fullName>
        <label>Deployment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Console</fullName>
                </value>
                <value>
                    <fullName>Custom Object (Other)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimating_Factor_ExternalID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Estimating Factor External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Implementation_Complex__c</fullName>
        <label>Implementation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Medium__c</fullName>
        <label>Implementation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Simple__c</fullName>
        <label>Implementation</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Methodology__c</fullName>
        <label>Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agile</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Prototype</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Formula__c</fullName>
        <formula>TEXT( Offering__c) + &apos;_&apos; + TEXT( Entity__c )+ &apos;_&apos; +  TEXT(Component__c) + &apos;_&apos; + TEXT(  Methodology__c )</formula>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering__c</fullName>
        <description>Products from Salesforce</description>
        <label>Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Cloud</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Salesforce1 Platform</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Work.com</fullName>
                </value>
                <value>
                    <fullName>Community Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Simple__c</fullName>
        <label>Simple</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Design_Complex__c</fullName>
        <label>System Design</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design_Medium__c</fullName>
        <label>System Design</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Design_Simple__c</fullName>
        <label>System Design</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Complex__c</fullName>
        <label>Testing</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Medium__c</fullName>
        <label>Testing</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Simple__c</fullName>
        <label>Testing</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Estimating Factor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name_Formula__c</columns>
        <columns>Estimating_Factor_ExternalID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EF-{0000}</displayFormat>
        <label>Estimating Factor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimating Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>